--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,16 +2,19 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}{% endblock %} - Ecom</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
         {% block stylesheets %}
         {% endblock %}
 
         {% block javascripts %}
             {% block importmap %}{{ importmap('app') }}{% endblock %}
+            <script src="https://cdn.tailwindcss.com"></script>
         {% endblock %}
     </head>
-    <body>
-        {% block body %}{% endblock %}
+    <body class="bg-slate-100 text-slate-900 p-10">
+        <main class="bg-white border-2 border-slate-200 rounded-xl p-5 w-full sm:w-2/3 sm:mx-auto">
+            {% block body %}{% endblock %}
+        </main>
     </body>
 </html>
