--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -12,4 +12,9 @@
     </h4>
 {% endfor %}
 
+{% if is_granted('IS_AUTHENTICATED_FULLY') %}
+    <a class="mt-3 py-2 px-4 bg-indigo-700 text-xl text-slate-50 rounded-md shadow"
+    href="{{ path('admin')}}">Go to dashboard</a>
+{% endif %}
+
 {% endblock %}
